<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cristiano.myteam.activity.PlayerActivity"
    tools:showIn="@layout/app_bar_player">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/player_first_name" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:hint="@string/player_last_name" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_displayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/player_display_name"
        app:layout_constraintLeft_toLeftOf="@+id/layout_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_displayName"
        android:id="@+id/layout_age_foot"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:baselineAligned="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_age"
            android:layout_weight="3"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/player_age"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_strongFoot"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/player_foot"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_left_foot" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_foot"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_right_foot" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_age_foot"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/layout_weight_height"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_height"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/player_height"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_weight"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/player_weight"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/player_unit_british" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sw_unit"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_unit_inter" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_role"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_weight_height"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/layout_weight_height"
        android:layout_marginStart="10dp" />

    <Spinner
        android:id="@+id/sp_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_role"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/tv_role"
        app:layout_constraintBottom_toBottomOf="@+id/tv_role"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.533" />

    <Spinner
        android:id="@+id/sp_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/sp_role"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@+id/sp_role"
        app:layout_constraintBottom_toBottomOf="@+id/sp_role"
        android:layout_marginBottom="0dp"
        android:visibility="invisible"/>

</android.support.constraint.ConstraintLayout>